--- a/src/03-feedback.html
+++ b/src/03-feedback.html
@@ -14,7 +14,7 @@
     <form class="feedback-form" autocomplete="off">
       <label>
         Email
-        <input type="email" name="email" autofocus placeholder="" />
+        <input type="email" name="email" autofocus />
       </label>
       <label>
         Message
